// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeView should render 1`] = `
<li
  aria-expanded={true}
  aria-level={2}
  aria-posinset={1}
  aria-selected={false}
  aria-setsize={4}
  className="tc-treeview-item-li theme-tc-treeview-li"
  data-hidden={undefined}
  id="my-treeview"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="treeitem"
  tabIndex={-1}
>
  <div
    className="tc-treeview-item theme-tc-treeview-item"
    style={
      Object {
        "paddingLeft": "62px",
      }
    }
  >
    <Action
      aria-hidden={true}
      className="theme-tc-treeview-toggle"
      icon="talend-caret-down"
      iconTransform={undefined}
      id="my-treeview-toggle"
      label=""
      link={true}
      onClick={[Function]}
      tabIndex="-1"
    />
    <TreeViewIcon
      icon={undefined}
      toggled={true}
    />
    <span
      className="tc-treeview-item-name theme-tc-treeview-item-name"
    >
      grandpa
    </span>
    <div
      className="theme-tc-treeview-item-ctrl"
    >
      <Translate(Badge)
        label="101"
      />
      <Action
        hideLabel={true}
        icon="talend-trash"
        id="my-treeview-talend-trash"
        label="remove element"
        link={true}
        onClick={[Function]}
        tooltipPlacement="right"
      />
    </div>
  </div>
  <ul
    className="theme-tc-treeview-ul"
    role="group"
  >
    <TreeViewItem
      id="my-treeview-0"
      index={1}
      item={
        Object {
          "children": Array [
            Object {
              "id": 111,
              "name": "me",
            },
            Object {
              "id": 112,
              "name": "bro",
            },
          ],
          "id": 11,
          "name": "mami",
          "toggled": true,
        }
      }
      itemSiblings={
        Array [
          Object {
            "children": Array [
              Object {
                "id": 111,
                "name": "me",
              },
              Object {
                "id": 112,
                "name": "bro",
              },
            ],
            "id": 11,
            "name": "mami",
            "toggled": true,
          },
          Object {
            "children": Array [
              Object {
                "id": 121,
                "name": "cousin",
              },
            ],
            "id": 12,
            "name": "aunt",
            "toggled": false,
          },
        ]
      }
      level={3}
      onSelect={[Function]}
      onToggle={[Function]}
      onToggleAllSiblings={[Function]}
      selectedId={undefined}
    />
    <TreeViewItem
      id="my-treeview-1"
      index={2}
      item={
        Object {
          "children": Array [
            Object {
              "id": 121,
              "name": "cousin",
            },
          ],
          "id": 12,
          "name": "aunt",
          "toggled": false,
        }
      }
      itemSiblings={
        Array [
          Object {
            "children": Array [
              Object {
                "id": 111,
                "name": "me",
              },
              Object {
                "id": 112,
                "name": "bro",
              },
            ],
            "id": 11,
            "name": "mami",
            "toggled": true,
          },
          Object {
            "children": Array [
              Object {
                "id": 121,
                "name": "cousin",
              },
            ],
            "id": 12,
            "name": "aunt",
            "toggled": false,
          },
        ]
      }
      level={3}
      onSelect={[Function]}
      onToggle={[Function]}
      onToggleAllSiblings={[Function]}
      selectedId={undefined}
    />
  </ul>
</li>
`;

exports[`TreeView should render items with icon 1`] = `
<li
  aria-expanded={undefined}
  aria-level={2}
  aria-posinset={1}
  aria-selected={false}
  aria-setsize={4}
  className="tc-treeview-item-li theme-tc-treeview-li"
  data-hidden={undefined}
  id="my-treeview"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="treeitem"
  tabIndex={-1}
>
  <div
    className="tc-treeview-item theme-tc-treeview-item"
    style={
      Object {
        "paddingLeft": "62px",
      }
    }
  >
    <TreeViewIcon
      icon={
        Object {
          "name": "src-http://static.pokemonpets.com/images/monsters-images-300-300/106-Hitmonlee.png",
          "title": "A pokemon",
        }
      }
      toggled={false}
    />
    <span
      className="tc-treeview-item-name theme-tc-treeview-item-name"
    >
      grandpa
    </span>
    <div
      className="theme-tc-treeview-item-ctrl"
    >
      <Translate(Badge)
        label="101"
      />
      <Action
        hideLabel={true}
        icon="talend-trash"
        id="my-treeview-talend-trash"
        label="remove element"
        link={true}
        onClick={[Function]}
        tooltipPlacement="right"
      />
    </div>
  </div>
</li>
`;
